changed site name again

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- web page title -->
-		<title>lv</title>
+		<title>lorenzo_villaggi</title>
 		<!-- load favicon -->
 		<link rel="shortcut icon" type="image/png" href="/favicon_blue.png"/>
 		<!-- load css & font -->
