added project element

--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@
 			<h1 id = "name">lorenzo villaggi</h1>
 
 			<p class = "subtitles" id = "experiments">
-			<a href="https://hyperuranion.tumblr.com/" target="_blank">experiments</a></p>
+			<a href="https://hyperuranion.tumblr.com/" target="_blank">ongoing experiments</a></p>
 
 			<p class = "subtitles" id = "teaching">
 			<a href="http://measurespace.tumblr.com/" target="_blank">teaching</a></p>
 
+			<p class = "subtitles" id = "projects">
+			<a href="" target="_blank">projects</a></p>
+			
 			<p class = "subtitles" id = "research">
 			<a href="https://www.researchgate.net/profile/Lorenzo_Villaggi" target="_blank">research</a></p>
+
 			<!-- Trigger/Open The Modal -->
 			<p class = "subtitles" id = "bio_and_contact">
 				<a>bio and contact</a></p>
