--- a/cv/index.html
+++ b/cv/index.html
@@ -14,10 +14,20 @@
 <div id="main">
 
 	<div id="header_section">
-		<p> Lorenzo Villaggi
-		</p>
-
+		<p id="header_name">Lorenzo Villaggi</p>
+		<p>lorenzo.villaggi@gmail.com</p>
+		<p>New York City (US), Milan (IT)</p>
 	</div>
+
+	<br></br>
+
+	<div id="education">
+		<p class = "section_title" >Education</p>
+		<p class = "body">
+			Columbia University GSAPP</p>
+		<p>New York City (US), Milan (IT)</p>
+	</div>
+
 
 </div>
 
