updated resume page

--- a/cv/index.html
+++ b/cv/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- web page title -->
-	<title>resume, Lorenzo Villaggi</title>
+	<title>what i've done on paper</title>
 	<!-- load favicon -->
 	<link rel="shortcut icon" type="image/png" href="/favicon_blue.png"/>
 	<!-- load css & font -->
@@ -15,18 +15,125 @@
 
 	<div id="header_section">
 		<p id="header_name">Lorenzo Villaggi</p>
-		<p>lorenzo.villaggi@gmail.com</p>
-		<p>New York City (US), Milan (IT)</p>
+		<p id="header_info"> Born in Piacenza, Italy. (1990) <br> Lives and works in New York City</p>
+		<p id="header_info">lorenzo.villaggi@gmail.com <br>
+		<a href=
+          https:/lorenzovillaggi.com/>
+          lorenzovillaggi.com</a> <br>
+          work sample or portfolio upon request
+		</p>
+
+
 	</div>
 
-	<br></br>
+	<!-- education section -->
+	<div id="section">
+		<h1 class = "section_title" >Education</h1>
+			<div id="sub_section">
+				<p id ="dates">2013-2015 </p>
+				<p id ="shortinfo"><a href=
+          https://www.arch.columbia.edu/>
+          Columbia University - Graduate School of Architecture Planning and Preservation</a><br> Master of Architecture</p>
+				<div style="clear: both;"></div>
+			</div>
 
-	<div id="education">
-		<p class = "section_title" >Education</p>
-		<p class = "body">
-			Columbia University GSAPP</p>
-		<p>New York City (US), Milan (IT)</p>
+			<div id="sub_section">
+				<p id ="dates">2009-2012 </p>
+				<p id ="shortinfo"><a href=
+          http://www.auic.polimi.it/>
+         Politecnico di Milano, Architettura e Società</a><br> Bachelor of Science in Architettura Ambientale, Architecture and the Environment</p>
+				<div style="clear: both;"></div>
+			</div>
+
+			<div id="sub_section">
+				<p id ="dates">2004-2009</p>
+				<p id ="shortinfo"><a href=http://www.liceogioia.it/>Liceo Classico Melchiorre Gioia</a> <br> Diploma in classical studies with focus on the sciences</p>
+				<div style="clear: both;"></div>
+			</div>
 	</div>
+	<!-- close education section -->
+
+	<!-- professional section -->
+	<div id="section">
+		<h1 class = "section_title" >Professional Experience</h1>
+			<div id="sub_section">
+				<p id ="dates">2015- </p>
+				<p id ="shortinfo"><a href=http://www.thelivingnewyork.com//>
+          The Living,</a> <a href=https://autodeskresearch.com/groups/living//>an Autodesk Studio</a> <br> Research Scientist Associate</p>
+				<div style="clear: both;"></div>
+			</div>
+
+			<div id="sub_section">
+				<p id ="dates">2009-2012 </p>
+				<p id ="shortinfo"><a href=
+          http://www.auic.polimi.it/>
+         Politecnico di Milano, Architettura e Società</a><br> Bachelor of Science in Architettura Ambientale, Architecture and the Environment</p>
+				<div style="clear: both;"></div>
+			</div>
+
+			<div id="sub_section">
+				<p id ="dates">2003-2009</p>
+				<p id ="shortinfo"><a href=http://www.liceogioia.it/>Liceo Classico Melchiorre Gioia</a> <br> Diploma in classical studies with focus on the sciences</p>
+				<div style="clear: both;"></div>
+			</div>
+	</div>
+	<!-- close professional section -->
+
+	<!-- professional section -->
+	<div id="section">
+		<h1 class = "section_title" >Academic Experience</h1>
+			<div id="sub_section">
+				<p id ="dates">2015- </p>
+				<p id ="shortinfo"><a href=http://www.thelivingnewyork.com//>
+          The Living,</a> <a href=https://autodeskresearch.com/groups/living//>an Autodesk Studio</a> <br> Master of Architecture</p>
+				<div style="clear: both;"></div>
+			</div>
+
+			<div id="sub_section">
+				<p id ="dates">2009-2012 </p>
+				<p id ="shortinfo"><a href=
+          http://www.auic.polimi.it/>
+         Politecnico di Milano, Architettura e Società</a><br> Bachelor of Science in Architettura Ambientale, Architecture and the Environment</p>
+				<div style="clear: both;"></div>
+			</div>
+
+			<div id="sub_section">
+				<p id ="dates">2003-2009</p>
+				<p id ="shortinfo"><a href=http://www.liceogioia.it/>Liceo Classico Melchiorre Gioia</a> <br> Diploma in classical studies with focus on the sciences</p>
+				<div style="clear: both;"></div>
+			</div>
+	</div>
+	<!-- close professional section -->
+
+	<!-- professional section -->
+	<div id="section">
+		<h1 class = "section_title" >Academic Experience</h1>
+			<div id="sub_section">
+				<p id ="dates">2015- </p>
+				<p id ="shortinfo"><a href=http://www.thelivingnewyork.com//>
+          The Living,</a> <a href=https://autodeskresearch.com/groups/living//>an Autodesk Studio</a> <br> Master of Architecture</p>
+				<div style="clear: both;"></div>
+			</div>
+
+			<div id="sub_section">
+				<p id ="dates">2009-2012 </p>
+				<p id ="shortinfo"><a href=
+          http://www.auic.polimi.it/>
+         Politecnico di Milano, Architettura e Società</a><br> Bachelor of Science in Architettura Ambientale, Architecture and the Environment</p>
+				<div style="clear: both;"></div>
+			</div>
+
+			<div id="sub_section">
+				<p id ="dates">2003-2009</p>
+				<p id ="shortinfo"><a href=http://www.liceogioia.it/>Liceo Classico Melchiorre Gioia</a> <br> Diploma in classical studies with focus on the sciences</p>
+				<div style="clear: both;"></div>
+			</div>
+	</div>
+	<!-- close professional section -->
+
+
+
+
 
 
 </div>
