--- a/cv/index.html
+++ b/cv/index.html
@@ -17,8 +17,7 @@
 		<p id="header_name">Lorenzo Villaggi</p>
 		<p id="header_info"> Born in Piacenza, Italy. (1990) <br> Lives and works in New York City</p>
 		<p id="header_info">lorenzo.villaggi@gmail.com <br>
-		<a href=
-          https:/lorenzovillaggi.com/>
+		<a href=https:/lorenzovillaggi.com/>
           lorenzovillaggi.com</a> <br>
           work sample or portfolio upon request
 		</p>
@@ -31,23 +30,21 @@
 		<h1 class = "section_title" >Education</h1>
 			<div id="sub_section">
 				<p id ="dates">2013-2015 </p>
-				<p id ="shortinfo"><a href=
-          https://www.arch.columbia.edu/>
+				<p id ="shortinfo"><a href=https://www.arch.columbia.edu/ target="_blank">
           Columbia University - Graduate School of Architecture Planning and Preservation</a><br> Master of Architecture</p>
 				<div style="clear: both;"></div>
 			</div>
 
 			<div id="sub_section">
 				<p id ="dates">2009-2012 </p>
-				<p id ="shortinfo"><a href=
-          http://www.auic.polimi.it/>
+				<p id ="shortinfo"><a href=http://www.auic.polimi.it/ target="_blank">
          Politecnico di Milano, Architettura e Società</a><br> Bachelor of Science in Architettura Ambientale, Architecture and the Environment</p>
 				<div style="clear: both;"></div>
 			</div>
 
 			<div id="sub_section">
 				<p id ="dates">2004-2009</p>
-				<p id ="shortinfo"><a href=http://www.liceogioia.it/>Liceo Classico Melchiorre Gioia</a> <br> Diploma in classical studies with focus on the sciences</p>
+				<p id ="shortinfo"><a href=http://www.liceogioia.it/ target="_blank">Liceo Classico Melchiorre Gioia</a> <br> Diploma in classical studies with focus on the sciences</p>
 				<div style="clear: both;"></div>
 			</div>
 	</div>
@@ -58,28 +55,47 @@
 		<h1 class = "section_title" >Professional Experience</h1>
 			<div id="sub_section">
 				<p id ="dates">2015- </p>
-				<p id ="shortinfo"><a href=http://www.thelivingnewyork.com//>
-          The Living,</a> <a href=https://autodeskresearch.com/groups/living//>an Autodesk Studio</a> <br> Research Scientist Associate</p>
+				<p id ="shortinfo"><a href=http://www.thelivingnewyork.com/ target="_blank">
+          The Living,</a> <a href=https://autodeskresearch.com/groups/living//>an Autodesk Studio</a> <i> Research Scientist Associate </i>
+     			     <br> Exploring the future today </p>
 				<div style="clear: both;"></div>
 			</div>
 
 			<div id="sub_section">
-				<p id ="dates">2009-2012 </p>
-				<p id ="shortinfo"><a href=
-          http://www.auic.polimi.it/>
-         Politecnico di Milano, Architettura e Società</a><br> Bachelor of Science in Architettura Ambientale, Architecture and the Environment</p>
+				<p id ="dates">2015- </p>
+				<p id ="shortinfo"><a href=http://www.special-methods.com/ target="_blank">Special Methods</a> <i> Co-Founder and designer </i>
+					<!-- <br> <i> Co-Founder and preacher </i>  -->
+					<br> Consult artists and institutions on the application of novel technologies through play, experimentation and development </p>
 				<div style="clear: both;"></div>
 			</div>
 
 			<div id="sub_section">
-				<p id ="dates">2003-2009</p>
-				<p id ="shortinfo"><a href=http://www.liceogioia.it/>Liceo Classico Melchiorre Gioia</a> <br> Diploma in classical studies with focus on the sciences</p>
+				<p id ="dates">2013- </p>
+				<p id ="shortinfo"><a href=http://www.c-o-l-o-n.com/ target="_blank">: (pronounced "colon")</a> <br> Co-founder and editor</p>
+				<div style="clear: both;"></div>
+			</div>
+
+			<div id="sub_section">
+				<p id ="dates">2013</p>
+				<p id ="shortinfo"><a href=http://www.latentnyc.com/ target="_blank">Latent Productions</a> <br> Materials specialist and designer</p>
+				<div style="clear: both;"></div>
+			</div>
+
+			<div id="sub_section">
+				<p id ="dates">2013</p>
+				<p id ="shortinfo"><a href=http://www.latentnyc.com/>Latent Productions</a> <br> Materials specialist and designer</p>
+				<div style="clear: both;"></div>
+			</div>
+
+			<div id="sub_section">
+				<p id ="dates">2013</p>
+				<p id ="shortinfo"><a href=http://www.latentnyc.com/>Latent Productions</a> <br> Materials specialist and designer</p>
 				<div style="clear: both;"></div>
 			</div>
 	</div>
 	<!-- close professional section -->
 
-	<!-- professional section -->
+	<!-- academic section -->
 	<div id="section">
 		<h1 class = "section_title" >Academic Experience</h1>
 			<div id="sub_section">
@@ -103,7 +119,7 @@
 				<div style="clear: both;"></div>
 			</div>
 	</div>
-	<!-- close professional section -->
+	<!-- close academic section -->
 
 	<!-- professional section -->
 	<div id="section">
